--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "diffstar" %}
 {% set version = "0.3.3" %}
+{% set python_min = "3.11" %}
 
 package:
   name: {{ name|lower }}
@@ -24,10 +25,12 @@ requirements:
     - python >={{ python_min }}
     - numpy
     - jax
-    - diffmah >=0.5.0
+    - diffmah >=0.7.0
     - h5py
 
 test:
+  commands:
+    - pip check
   requires:
     - python {{ python_min }}
   imports:
